force-app/main/default/objects/Project__c/fields/Documentation__c.field-meta.xml
<CustomField>
    <fullName>Documentation__c</fullName>
    <inlineHelpText>Please leave the link to the documentation, for example the Confluence Page</inlineHelpText>
    <label>Documentation</label>
    <type>Url</type>
</CustomField>