force-app/main/default/objects/Project__c/fields/External_Project_Folder__c.field-meta.xml
<CustomField>
    <fullName>External_Project_Folder__c</fullName>
    <inlineHelpText>Please add the link to external project folders here.</inlineHelpText>
    <label>External Project Folder</label>
    <type>Url</type>
</CustomField>