force-app/main/default/objects/Project__c/fields/Planed_Total_Budged__c.field-meta.xml
<CustomField>
    <fullName>Planed_Total_Budged__c</fullName>
    <label>Planned Total Budged</label>
    <summarizedField>ProjectTask__c.Planed_Budged__c</summarizedField>
    <summaryForeignKey>ProjectTask__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>