force-app/main/default/objects/Project__c/fields/Planned_Total_Work_Hours__c.field-meta.xml
<CustomField>
    <fullName>Planned_Total_Work_Hours__c</fullName>
    <label>Planned Total Work Hours</label>
    <summarizedField>ProjectTask__c.Planed_Hours__c</summarizedField>
    <summaryForeignKey>ProjectTask__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>