force-app/main/default/objects/Project__c/fields/PlannedTotalBudget__c.field-meta.xml
<CustomField>
    <fullName>PlannedTotalBudget__c</fullName>
    <label>Planned Total Budget</label>
    <summarizedField>ProjectTask__c.PlanedBudged__c</summarizedField>
    <summaryForeignKey>ProjectTask__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>