force-app/main/default/objects/Project__c/fields/ProjectManagerIntern__c.field-meta.xml
<CustomField>
    <fullName>ProjectManagerIntern__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>old</description>
    <label>Project Manager</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>