force-app/main/default/objects/Project__c/fields/Total_Project_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Total_Project_Tasks__c</fullName>
    <label>Total Project Tasks</label>
    <summaryForeignKey>ProjectTask__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>