force-app/main/default/objects/Project__c/fields/Used_Total_Working_Hours__c.field-meta.xml
<CustomField>
    <fullName>Used_Total_Working_Hours__c</fullName>
    <label>Used Total Working Hours</label>
    <summarizedField>ProjectTask__c.Used_Hours__c</summarizedField>
    <summaryForeignKey>ProjectTask__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>