force-app/main/default/objects/Project__c/fields/UsedTotalBudget__c.field-meta.xml
<CustomField>
    <fullName>UsedTotalBudget__c</fullName>
    <label>Used Total Budget</label>
    <summarizedField>ProjectTask__c.UsedBudget__c</summarizedField>
    <summaryForeignKey>ProjectTask__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>